--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,7 @@ opencv-python==4.12.0.88
 setuptools==80.9.0
 Werkzeug==3.1.3
 wheel==0.45.1
+pymysql==1.1.1
+openai==1.12.0
+Pillow==10.2.0
+python-dotenv==1.0.0
